# sergio_description

./: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  publish_jointstates.py  start.launch  urdf_todo.txt
custom/: joint_groups.yaml  skills.yaml
documentation/: Readme.txt  an.m  di.m  torso_measures_NX.m
launch/: load_description.launch
media/meshes/: Base2_reduced.dae  Base2_reduced.stl  Base2_reduced10000.dae  Base2_reduced55000.dae  torso.stl  torso_reduced10000.dae  torso_reduced2500.dae  torso_reduced5000.dae  upper_leg.stl  upper_leg_reduced10000.dae  upper_leg_reduced5000.dae
scripts/: update.bash
sdf/: amigo2.sdf  sergio.sdf  sergio_physicless.sdf
urdf/: amigo2.urdf  macro_definitions.xacro  materials.urdf.xacro  sergio.urdf  sergio.urdf.xacro
urdf/arms/: arm.urdf.xacro  arm_extra.urdf.xacro
urdf/base/: base.urdf.xacro
urdf/head/: head.urdf.xacro
urdf/kinect/: top_kinect.urdf.xacro
urdf/torso/: torso.urdf.xacro
urdf/xacro/: amigo2.urdf.xacro  definitions.xacro  gazebo.urdf.xacro  macro_definitions.xacro  materials.urdf.xacro  robot.urdf.xacro  sergio.urdf.xacro
urdf/xacro/arms/: arm.urdf.xacro  arm_extra.urdf.xacro
urdf/xacro/base/: base.urdf.xacro
urdf/xacro/head/: head.urdf.xacro
urdf/xacro/kinect/: top_kinect.urdf.xacro
urdf/xacro/laser/: laser.urdf.xacro  torso_laser.urdf.xacro  torso_laser_joint.urdf.xacro
urdf/xacro/torso/: torso.urdf.xacro
urdf/xacro/ultrasone/: ultrasone.urdf.xacro
